[GStreamer] GstStructure to JSON serialization https://bugs.webkit.org/show_bug.cgi?id=235760

Patch by Philippe Normand <pnormand@igalia.com> on 2022-01-30
Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

For GstWebRTC stats logging purposes JSON is a good payload format. As the stats are
initially notified via GstStructures we need a way to export those to JSON, using a new API
in GStreamerCommon.

Covered by API tests.

* platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::structureValueToJSON):
(WebCore::parseStructureValue):
(WebCore::structureToJSON):
(WebCore::structureToJSONString):
* platform/graphics/gstreamer/GStreamerCommon.h:

Tools:

* TestWebKitAPI/Tests/WebCore/gstreamer/GStreamerTest.cpp:
(TestWebKitAPI::TEST_F):


Canonical link: https://commits.webkit.org/246575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288799 268f45cc-cd09-0410-ab3c-d52691b4dbfc